--- a/rhyme/templates/rhyme/partials/export_action.html
+++ b/rhyme/templates/rhyme/partials/export_action.html
@@ -1,7 +1,7 @@
 <div class="dropdown export-dropdown pull-right">
     <button class="btn btn-info btn-xs dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
         <span class="fas fa-cloud-download-alt"></span>
-        Export
+        Export <span data-bind="text: count"></span> {{ model }}s
         <span class="caret"></span>
     </button>
 
