--- a/rhyme/templates/rhyme/partials/modal_filter_base_button.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_base_button.html
@@ -1,4 +1,4 @@
-<div class="filter-type" data-bind="with: getFilterTypeModel('{{ lhs }}')" style="margin-top: 5px;"><!-- TODO: move into class -->
+<div class="filter-type" data-bind="with: getFilterTypeModel('{{ lhs }}')">
     <div class="btn-group" role="group">
         <button class="btn btn-xs btn-default" data-toggle="modal" data-target="#filter-modal-{{ name|slugify }}" data-bind="css: {'active': filterText}">
             <i class="fas fa-{{ icon|default:"plus" }}"></i>
