--- a/rhyme/templates/rhyme/songs.html
+++ b/rhyme/templates/rhyme/songs.html
@@ -21,7 +21,7 @@
 {% endblock filters %}
 
 {% block content %}
-    <table class="song-table table table-striped table-condensed table-hover infinite-scroll-container">
+    <table class="song-table table table-striped table-condensed table-hover">
         <thead>
             <th>&nbsp;</th>
             <th>Name</th>
