--- a/rhyme/templates/rhyme/base.html
+++ b/rhyme/templates/rhyme/base.html
@@ -72,7 +72,7 @@
                 {% endblock %}
             </div>
             </div>
-            <div class="col-sm-10 text-center post-nav-right">
+            <div class="col-sm-10 post-nav-right">
                 {% block content %}{% endblock %}
                 {% include "rhyme/partials/loading.html" %}
             </div>
