Moved modals out of now-fixed container

--- a/rhyme/templates/rhyme/albums.html
+++ b/rhyme/templates/rhyme/albums.html
@@ -17,5 +17,6 @@
 {% endblock content %}
 
 {% block modals %}
+    {{ block.super }}
     {% include "rhyme/partials/modal_song_list.html" %}
 {% endblock %}
