Moved some logic from jQuery to React

--- a/rhyme/templates/rhyme/partials/song_row.html
+++ b/rhyme/templates/rhyme/partials/song_row.html
@@ -2,6 +2,7 @@
     <td class="icon-cell is-starred" data-bind="reactStar: {
         id: id,
         value: starred,
+        activePlaylistId: $root.activePlaylistId(),
         onClasses: $parent.starOnClasses(),
         offClasses: $parent.starOffClasses(),
     }">
