Switched active playlist attribute from id to name so read only filter looks nice

--- a/rhyme/templates/rhyme/partials/song_row.html
+++ b/rhyme/templates/rhyme/partials/song_row.html
@@ -2,7 +2,7 @@
     <td class="icon-cell is-starred" data-bind="reactStar: {
         id: id,
         value: starred,
-        activePlaylistId: $root.activePlaylistId(),
+        activePlaylistName: $root.activePlaylistName(),
         onClasses: $parent.starOnClasses(),
         offClasses: $parent.starOffClasses(),
     }">
