Fixed PlaylistSong.songs to pull proper ids

--- a/rhyme/static/rhyme/style/albums.less
+++ b/rhyme/static/rhyme/style/albums.less
@@ -3,7 +3,7 @@
 
 .albums {
     text-align: center;
-    padding: @spacingWide;
+    padding: 0 @spacingWide;
 
     .album {
         @albumSize: 200px;
