--- a/rhyme/static/rhyme/style/structure.less
+++ b/rhyme/static/rhyme/style/structure.less
@@ -50,7 +50,7 @@ body > .loading {
 
     .post-nav-left {
         position: fixed;
-        top: @navHeight + @spacingWide + 24px;  // 24px for table header height
+        top: @navHeight + @spacingWide;
         bottom: @spacingWide;
         overflow-y: auto;
         width: 16%;    // col-sm-2
@@ -63,7 +63,7 @@ body > .loading {
     .post-nav-right {
         .item-page {
             position: fixed;
-            top: @navHeight + @spacingWide + 24px;  // 24px for table header height - needs for songs page, not too terrible on albums page
+            top: @navHeight + @spacingWide;
             bottom: @spacingWide;
             overflow-y: auto;
         }
