--- a/rhyme/static/rhyme/style/songs.less
+++ b/rhyme/static/rhyme/style/songs.less
@@ -1,5 +1,16 @@
 @import "base.less";
 
+#active-playlist-container {
+    width: 100%;
+    margin-top: 24px;   // Push the whole filter column down the same height as the song table's header height
+}
+
+
+// Override structure.less
+.post-nav .post-nav-right .song-table .item-page {
+    top: @navHeight + @spacingWide + 24px;  // Add 24px for table header height
+}
+
 .song-table {
     tr {
         td {
