Removed songs table header

--- a/rhyme/static/rhyme/style/songs.less
+++ b/rhyme/static/rhyme/style/songs.less
@@ -2,27 +2,21 @@
 
 #active-playlist-container {
     width: 100%;
-    margin-top: 24px;   // Push the whole filter column down the same height as the song table's header height
-}
-
-
-// Override structure.less
-.post-nav .post-nav-right .song-table .item-page {
-    top: @navHeight + @spacingWide + 24px;  // Add 24px for table header height
 }
 
 .song-table {
     tr {
+        th.icon-cell, td.icon-cell {
+            width: @fontSizeDefault + @spacingNarrow * 2;
+        }
+
         td {
             border: none;
+            border-bottom: 1px solid @greyLightest;
             vertical-align: middle;
 
             a {
                 color: @defaultFontColor;
-            }
-
-            &:not(:first-child) {
-                border-bottom: 1px solid @greyLightest;
             }
 
             &:last-child {
@@ -34,9 +28,7 @@
             }
 
             &.icon-cell {
-                width: @fontSizeDefault + @spacingNarrow * 2;
                 color: @greyLight;
-                border: none;
 
                 .far, .fas {
                     cursor: pointer;
