--- a/rhyme/static/rhyme/style/structure.less
+++ b/rhyme/static/rhyme/style/structure.less
@@ -1,11 +1,21 @@
 @import "variables.less";
 
 body > .loading {
+    @width: 400px;
+    @height: 75px;;
+
     position: fixed;
-    border-radius: 0;
-    > div {
-        position: fixed;
-    }
+    left: calc(50% - @width / 2);
+    top: 0;
+    z-index: 9999;  // :(
+
+    font-size: 200%;
+    border-radius: 0 0 8px 8px;
+    background-color: #cccccc;
+    opacity: 0.5;
+    padding: @spacingWide;
+    width: @width;
+    height: @height;
 }
 
 .navbar-container {
