--- a/rhyme/templates/rhyme/partials/loading.html
+++ b/rhyme/templates/rhyme/partials/loading.html
@@ -1,4 +1,4 @@
-<p class='loading text-center' data-bind='visible: isLoading'>
+<div class='loading text-center' data-bind='visible: isLoading'>
     <i class='fas fa-spinner fa-spin'></i>
     Loading...
-</p>
+</div>
