Make song modal exports correct on consistent for both songs and albums pages

--- a/rhyme/templates/rhyme/base.html
+++ b/rhyme/templates/rhyme/base.html
@@ -30,7 +30,7 @@
             {% if has_export %}
                 <div class="controls">
                     {% block controls %}
-                        {% include "rhyme/partials/export_action.html" with params="{}" %}
+                        {% include "rhyme/partials/export_action.html" with count="count" model=model params="{}" %}
                     {% endblock controls %}
                 </div>
             {% endif %}
