Updated export dropdown menu styles to apply to all icons

--- a/rhyme/static/rhyme/style/structure.less
+++ b/rhyme/static/rhyme/style/structure.less
@@ -27,9 +27,11 @@ body > .loading {
         .dropdown-toggle {
             cursor: pointer;
         }
-        .dropdown-menu .fas {
-            color: @grey;
-            margin-right: @spacingNarrow;
+        .dropdown-menu {
+            .far, .fas {
+                color: @grey;
+                margin-right: @spacingNarrow;
+            }
         }
         li.active > a > .fas {
             color: @white;
