Updated button classes

--- a/rhyme/templates/rhyme/base.html
+++ b/rhyme/templates/rhyme/base.html
@@ -66,7 +66,7 @@
             <div class="col-sm-2">
             <div class="post-nav-left">
                 {% block filters %}
-                    <input class="form-control input-sm" data-bind="value: omniFilter, valueUpdate: 'keyup'" />
+                    <input class="form-control form-control-sm" data-bind="value: omniFilter, valueUpdate: 'keyup'" />
                     {% include "rhyme/partials/filters.html" %}
                 {% endblock %}
             </div>
