--- a/rhyme/templates/rhyme/partials/filters.html
+++ b/rhyme/templates/rhyme/partials/filters.html
@@ -24,7 +24,7 @@
 <input name="album_filters" type="hidden" data-bind="value: albumFilters" />
 
 <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default btn-xs" data-bind="click: toggleConjunction, css: {active: useAnd}">AND</button>
-    <button type="button" class="btn btn-default btn-xs" data-bind="click: toggleConjunction, css: {active: useOr}">OR</button>
+    <button type="button" class="btn btn-outline-primary btn-sm" data-bind="click: toggleConjunction, css: {active: useAnd}">AND</button>
+    <button type="button" class="btn btn-outline-primary btn-sm" data-bind="click: toggleConjunction, css: {active: useOr}">OR</button>
 </div>
 <input name="conjunction" type="hidden" data-bind="value: conjunction" />
