--- a/rhyme/templates/rhyme/partials/export_action.html
+++ b/rhyme/templates/rhyme/partials/export_action.html
@@ -1,5 +1,5 @@
 <div class="dropdown export-dropdown pull-right">
-    <button class="btn btn-info btn-xs dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    <button class="btn btn-primary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="true" id="export-dropdown-toggle">
         <span class="fas fa-cloud-download-alt"></span>
         Export <span data-bind="text: {{ count }}"></span> {{ model }}s
         <span class="caret"></span>
