--- a/rhyme/templates/rhyme/partials/modal_filter_numeric.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_numeric.html
@@ -14,7 +14,7 @@
             <div class="col-sm-6">
                 <button class="btn btn-info btn-block"
                         data-bind="click: function (model, e) { addFilter('{{ model }}', '{{ lhs }}', '>=', getFilterValue(e)) }"
-                        data-dismiss="modal">
+                        data-bs-dismiss="modal">
                     Onward
                 </button>
             </div>
@@ -33,7 +33,7 @@
             <div class="col-sm-6">
                 <button class="btn btn-info btn-block"
                         data-bind="click: function (model, e) { addFilter('{{ model }}', '{{ lhs }}', '<=', getFilterValue(e)) }"
-                        data-dismiss="modal">
+                        data-bs-dismiss="modal">
                     Onward
                 </button>
             </div>
