--- a/rhyme/templates/rhyme/partials/modal_filter_rating.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_rating.html
@@ -17,7 +17,7 @@
     <div class="form-group">
         <div class="row">
             <div class="col-sm-4">
-                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '<=', 4) }" data-dismiss="modal">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '<=', 4) }" data-bs-dismiss="modal">
                     at most
                     <i class='fas fa-{{ icon }}'></i>
                     <i class='fas fa-{{ icon }}'></i>
@@ -26,7 +26,7 @@
                 </button>
             </div>
             <div class="col-sm-4">
-                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=', 4) }" data-dismiss="modal">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=', 4) }" data-bs-dismiss="modal">
                     <i class='fas fa-{{ icon }}'></i>
                     <i class='fas fa-{{ icon }}'></i>
                     <i class='fas fa-{{ icon }}'></i>
@@ -34,7 +34,7 @@
                 </button>
             </div>
             <div class="col-sm-4">
-                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '>=', 4) }" data-dismiss="modal">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '>=', 4) }" data-bs-dismiss="modal">
                     at least
                     <i class='fas fa-{{ icon }}'></i>
                     <i class='fas fa-{{ icon }}'></i>
@@ -47,7 +47,7 @@
     <div class="form-group">
         <div class="row">
             <div class="col-sm-4">
-                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '<=', 3) }" data-dismiss="modal">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '<=', 3) }" data-bs-dismiss="modal">
                     at most
                     <i class='fas fa-{{ icon }}'></i>
                     <i class='fas fa-{{ icon }}'></i>
@@ -55,14 +55,14 @@
                 </button>
             </div>
             <div class="col-sm-4">
-                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=', 3) }" data-dismiss="modal">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=', 3) }" data-bs-dismiss="modal">
                     <i class='fas fa-{{ icon }}'></i>
                     <i class='fas fa-{{ icon }}'></i>
                     <i class='fas fa-{{ icon }}'></i>
                 </button>
             </div>
             <div class="col-sm-4">
-                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '>=', 3) }" data-dismiss="modal">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '>=', 3) }" data-bs-dismiss="modal">
                     at least
                     <i class='fas fa-{{ icon }}'></i>
                     <i class='fas fa-{{ icon }}'></i>
@@ -74,20 +74,20 @@
     <div class="form-group">
         <div class="row">
             <div class="col-sm-4">
-                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '<=', 2) }" data-dismiss="modal">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '<=', 2) }" data-bs-dismiss="modal">
                     at most
                     <i class='fas fa-{{ icon }}'></i>
                     <i class='fas fa-{{ icon }}'></i>
                 </button>
             </div>
             <div class="col-sm-4">
-                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=', 2) }" data-dismiss="modal">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=', 2) }" data-bs-dismiss="modal">
                     <i class='fas fa-{{ icon }}'></i>
                     <i class='fas fa-{{ icon }}'></i>
                 </button>
             </div>
             <div class="col-sm-4">
-                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '>=', 2) }" data-dismiss="modal">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '>=', 2) }" data-bs-dismiss="modal">
                     at least
                     <i class='fas fa-{{ icon }}'></i>
                     <i class='fas fa-{{ icon }}'></i>
@@ -98,7 +98,7 @@
     <div class="form-group">
         <div class="row">
             <div class="col-sm-12">
-                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=', 1) }" data-dismiss="modal">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=', 1) }" data-bs-dismiss="modal">
                     <i class='fas fa-{{ icon }}'></i>
                 </button>
             </div>
