--- a/rhyme/templates/rhyme/partials/modal_filter_select.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_select.html
@@ -17,7 +17,7 @@
             <div class="{% if include_all %}col-sm-4{% else %}col-sm-6{% endif %}">
                 <button class="btn btn-info btn-block"
                         data-bind="click: function (model, e) { addFilter('{{ model }}', '{{ lhs }}', '*=', getFilterValue(e)) }"
-                        data-dismiss="modal">
+                        data-bs-dismiss="modal">
                     Any
                 </button>
             </div>
@@ -25,7 +25,7 @@
                 <div class="{% if include_all %}col-sm-4{% else %}col-sm-6{% endif %}">
                     <button class="btn btn-info btn-block"
                             data-bind="click: function (model, e) { addFilter('{{ model }}', '{{ lhs }}', '=', getFilterValue(e)) }"
-                            data-dismiss="modal">
+                            data-bs-dismiss="modal">
                         All
                     </button>
                 </div>
@@ -33,7 +33,7 @@
             <div class="{% if include_all %}col-sm-4{% else %}col-sm-6{% endif %}">
                 <button class="btn btn-info btn-block"
                         data-bind="click: function (model, e) { addFilter('{{ model }}', '{{ lhs }}', '!=', getFilterValue(e)) }"
-                        data-dismiss="modal">
+                        data-bs-dismiss="modal">
                     None
                 </button>
             </div>
