Updated network filters

--- a/rhyme/static/rhyme/style/rhyme.less
+++ b/rhyme/static/rhyme/style/rhyme.less
@@ -2,6 +2,7 @@
 @import "base.less";
 @import "defaults.less";
 @import "matrix.less";
+@import "network.less";
 @import "songs.less";
 @import "stats.less";
 @import "structure.less";
