--- a/rhyme/static/rhyme/style/stats.less
+++ b/rhyme/static/rhyme/style/stats.less
@@ -1,6 +1,6 @@
 @import "base.less";
 
-@barColor: #31b0d5;    // bootstrap "info"
+@barColor: #31d2f2;    // bootstrap "info"
 
 .background-with-states(@color) {
     fill: @color;
