--- a/rhyme/templates/rhyme/partials/modal_filter_rating.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_rating.html
@@ -4,7 +4,8 @@
     <div class="form-group">
         <div class="row">
             <div class="col-sm-12">
-                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=', 5) }" data-dismiss="modal">
+                {# TODO: fix all btn-block #}
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=', 5) }" data-bs-dismiss="modal">
                     <i class='fas fa-{{ icon }}'></i>
                     <i class='fas fa-{{ icon }}'></i>
                     <i class='fas fa-{{ icon }}'></i>
