--- a/rhyme/templates/rhyme/stats.html
+++ b/rhyme/templates/rhyme/stats.html
@@ -10,6 +10,7 @@
 {% endblock js %}
 
 {% block controls %}
+    <!-- TODO: button styles -->
     <span class="selection-buttons hide">
         <button class="btn btn-info btn-xs" data-bind="click: viewSelection">
             <i class="fas fa-eye"></i>
