Updated modal filters

--- a/rhyme/templates/rhyme/partials/modal_filter_base.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_base.html
@@ -8,19 +8,15 @@
             <div class="modal-body">
                 {% block body %}{% endblock %}
                 {% if not disallow_null %}
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=?', false) }" data-bs-dismiss="modal">
-                                <i class="fas fa-question-circle"></i>
-                                is null
-                            </button>
-                        </div>
-                        <div class="col-sm-6">
-                            <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=?', true) }" data-bs-dismiss="modal">
-                                <i class="fas fa-check-circle"></i>
-                                is not null
-                            </button>
-                        </div>
+                    <div class="d-flex gap-2">
+                        <button class="btn btn-outline-secondary flex-fill" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=?', false) }" data-bs-dismiss="modal">
+                            <i class="fas fa-question-circle"></i>
+                            is null
+                        </button>
+                        <button class="btn btn-outline-secondary flex-fill" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=?', true) }" data-bs-dismiss="modal">
+                            <i class="fas fa-check-circle"></i>
+                            is not null
+                        </button>
                     </div>
                 {% endif %}
             </div>
