--- a/rhyme/templates/rhyme/partials/modal_filter_bool.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_bool.html
@@ -1,8 +1,8 @@
 {% extends 'rhyme/partials/modal_filter_base.html' %}
 
 {% block body %}
-    <div class="d-grid gap-2">
-        <button class="btn btn-outline-secondary btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=', 1) }" data-bs-dismiss="modal">On</button>
-        <button class="btn btn-outline-secondary btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=', 0) }" data-bs-dismiss="modal">Off</button>
+    <div class="d-flex gap-2">
+        <button class="btn btn-outline-secondary flex-fill" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=', 1) }" data-bs-dismiss="modal">On</button>
+        <button class="btn btn-outline-secondary flex-fill" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=', 0) }" data-bs-dismiss="modal">Off</button>
     </div>
 {% endblock %}
