--- a/rhyme/templates/rhyme/stats.html
+++ b/rhyme/templates/rhyme/stats.html
@@ -10,13 +10,12 @@
 {% endblock js %}
 
 {% block controls %}
-    <!-- TODO: button styles -->
     <span class="selection-buttons hide">
-        <button class="btn btn-info btn-xs" data-bind="click: viewSelection">
+        <button class="btn btn-info btn-sm" data-bind="click: viewSelection">
             <i class="fas fa-eye"></i>
             View Songs
         </button>
-        <button class="btn btn-info btn-xs" data-bind="click: clearSelection">
+        <button class="btn btn-info btn-sm" data-bind="click: clearSelection">
             <i class="fas fa-times"></i>
             Clear Selection
         </button>
