Replaced pull-right with float-end

--- a/rhyme/templates/rhyme/partials/modal_song_list.html
+++ b/rhyme/templates/rhyme/partials/modal_song_list.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4>
-                    <div class="pull-right">
+                    <div class="float-end">
                         {% include "rhyme/partials/export_action.html" with count="songListCount" model="song" params="songListParams()" %}
                     </div>
                     <span class="modal-title" data-bind="text: modalName"></span>
