--- a/rhyme/templates/rhyme/partials/export_action.html
+++ b/rhyme/templates/rhyme/partials/export_action.html
@@ -1,4 +1,4 @@
-<div class="dropdown export-dropdown pull-right">
+<div class="dropdown export-dropdown float-end">
     <button class="btn btn-primary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="true" id="export-dropdown-toggle">
         <span class="fas fa-cloud-download-alt"></span>
         Export <span data-bind="text: {{ count }}"></span> {{ model }}s
